Add Java 11 support (#14)
* Update POM files

* Add maven wrapper

* Update encon-common to Java 11

* Update encon-terms for Java 11

* Update encon-config for java 11

* Update encon-databind for Java 11

* Update base encon project for Java 11

* Correct author JavaDoc

* Update encon-handler for Java 11

* Update examples for Java 11

* Set java 11 in Travis

* Update benchmark README.md for Java 11

* merge with master

* fix benchmark installation

* update benchmark readme