@@ -31,11 +31,13 @@ limitations under the License.
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
 
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <java.version>11</java.version>
 
-    <maven.compiler.testTarget>1.8</maven.compiler.testTarget>
-    <maven.compiler.testSource>1.8</maven.compiler.testSource>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+
+    <maven.compiler.testTarget>${java.version}</maven.compiler.testTarget>
+    <maven.compiler.testSource>${java.version}</maven.compiler.testSource>
   </properties>
 
   <modules>
@@ -104,26 +106,71 @@ limitations under the License.
       <name>Artem Labazin</name>
       <email>xxlabaza@gmail.com</email>
     </developer>
-    <developer>
-      <id>ambivalence42</id>
-      <name>Sokol Andrey</name>
-      <email>sokolandrey1993@mail.ru</email>
-    </developer>
-    <developer>
-      <id>isv</id>
-      <name>Stan Ignatev</name>
-      <email>i.v.stanislav@gmail.com</email>
-    </developer>
   </developers>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.4</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>net.jcip</groupId>
+      <artifactId>jcip-annotations</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+      <version>3.1.9</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.2</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.3.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.3.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.11.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.23.4</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>2.23.4</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>1.18.2</version>
-      </dependency>
-
       <dependency>
         <groupId>io.appulse</groupId>
         <artifactId>logging-java</artifactId>
@@ -149,6 +196,12 @@ limitations under the License.
         <artifactId>server</artifactId>
         <version>1.0.2</version>
       </dependency>
+      
+      <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>1.23</version>
+      </dependency>
 
       <dependency>
         <groupId>org.erlang.otp</groupId>
@@ -157,30 +210,19 @@ limitations under the License.
       </dependency>
 
       <dependency>
-        <groupId>com.google.code.findbugs</groupId>
-        <artifactId>annotations</artifactId>
-        <version>3.0.1u2</version>
-      </dependency>
-      <dependency>
-        <groupId>com.google.code.findbugs</groupId>
-        <artifactId>jsr305</artifactId>
-        <version>3.0.2</version>
-      </dependency>
-
-      <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-buffer</artifactId>
-        <version>4.1.29.Final</version>
+        <version>4.1.32.Final</version>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-handler</artifactId>
-        <version>4.1.29.Final</version>
+        <version>4.1.32.Final</version>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-transport-native-epoll</artifactId>
-        <version>4.1.29.Final</version>
+        <version>4.1.32.Final</version>
         <classifier>linux-x86_64</classifier>
         <exclusions>
           <exclusion>
@@ -209,22 +251,6 @@ limitations under the License.
         <artifactId>jmh-generator-annprocess</artifactId>
         <version>1.21</version>
       </dependency>
-
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-      </dependency>
-      <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <version>3.11.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-core</artifactId>
-        <version>2.22.0</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -232,9 +258,9 @@ limitations under the License.
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>findbugs-maven-plugin</artifactId>
-          <version>3.0.5</version>
+          <groupId>com.github.spotbugs</groupId>
+          <artifactId>spotbugs-maven-plugin</artifactId>
+          <version>3.1.8</version>
           <configuration>
             <effort>Max</effort>
             <threshold>Low</threshold>
@@ -243,22 +269,22 @@ limitations under the License.
           </configuration>
           <executions>
             <execution>
-              <id>analyze-compile</id>
-              <phase>package</phase>
+              <id>spotbugs-validation</id>
+              <phase>verify</phase>
               <goals>
                 <goal>check</goal>
               </goals>
             </execution>
           </executions>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
-          <version>3.10.0</version>
+          <version>3.11.0</version>
           <configuration>
             <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
             <targetJdk>${maven.compiler.source}</targetJdk>
-            <verbose>true</verbose>
             <failOnViolation>true</failOnViolation>
             <printFailingErrors>true</printFailingErrors>
             <analysisCache>true</analysisCache>
@@ -269,7 +295,8 @@ limitations under the License.
           </configuration>
           <executions>
             <execution>
-              <phase>package</phase>
+              <id>pmd-validation</id>
+              <phase>verify</phase>
               <goals>
                 <goal>check</goal>
               </goals>
@@ -285,13 +312,13 @@ limitations under the License.
             <dependency>
               <groupId>com.puppycrawl.tools</groupId>
               <artifactId>checkstyle</artifactId>
-              <version>8.12</version>
+              <version>8.15</version>
             </dependency>
           </dependencies>
           <executions>
             <execution>
-              <id>validate</id>
-              <phase>package</phase>
+              <id>checkstyle-validation</id>
+              <phase>verify</phase>
               <goals>
                 <goal>check</goal>
               </goals>
@@ -310,7 +337,7 @@ limitations under the License.
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.10.4</version>
+          <version>3.0.1</version>
           <configuration>
             <additionalOptions>-Xdoclint:none</additionalOptions>
             <additionalparam>-Xdoclint:none</additionalparam>
@@ -320,7 +347,7 @@ limitations under the License.
             <encoding>UTF-8</encoding>
             <failOnError>true</failOnError>
             <show>protected</show>
-            <source>1.8</source>
+            <source>${java.version}</source>
             <version>true</version>
           </configuration>
           <executions>
@@ -388,15 +415,66 @@ limitations under the License.
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.21.0</version>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
         <configuration>
+          <release>${java.version}</release>
+          <compilerVersion>${maven.compiler.target}</compilerVersion>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
+        <version>2.2.5</version>
+        <executions>
+          <execution>
+            <id>git-infos</id>
+            <goals>
+              <goal>revision</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <runOnlyOnce>true</runOnlyOnce>
+          <failOnNoGitDirectory>false</failOnNoGitDirectory>
+          <generateGitPropertiesFile>true</generateGitPropertiesFile>
+          <verbose>false</verbose>
+          <prefix>git</prefix>
+          <generateGitPropertiesFilename>
+            ${project.build.outputDirectory}/git.properties
+          </generateGitPropertiesFilename>
+          <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
+          <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+          <excludeProperties>
+            <excludeProperty>git.closest.tag.commit.count</excludeProperty>
+            <excludeProperty>git.closest.tag.name</excludeProperty>
+          </excludeProperties>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
+        <configuration>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
           <trimStackTrace>false</trimStackTrace>
           <includes>
             <include>**/*Test.java</include>
+            <include>**/*Tests.java</include>
+            <include>**/Test*.java</include>
           </includes>
           <excludes>
+            <exclude>**/it/**</exclude>
             <exclude>**/*IntegrationTest.java</exclude>
+            <exclude>**/*IntegrationTests.java</exclude>
+            <exclude>**/*IT.java</exclude>
+            <exclude>**/IT*.java</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -404,14 +482,20 @@ limitations under the License.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.21.0</version>
+        <version>2.22.1</version>
         <configuration>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
           <includes>
             <include>**/*IntegrationTest.java</include>
+            <include>**/*IntegrationTests.java</include>
+            <include>**/*IT.java</include>
+            <include>**/IT*.java</include>
+            <include>**/it/**/*Test.java</include>
+            <include>**/it/**/*Tests.java</include>
+            <include>**/it/**/Test*.java</include>
           </includes>
-          <excludes>
-            <exclude>**/*Test.java</exclude>
-          </excludes>
         </configuration>
         <executions>
           <execution>
